can now segue from profile picture

--- a/twitter-demo/twitter-demo/Base.lproj/Main.storyboard
+++ b/twitter-demo/twitter-demo/Base.lproj/Main.storyboard
@@ -68,12 +68,16 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="134"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lbo-A7-MBe">
+                                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lbo-A7-MBe">
                                                     <rect key="frame" x="8" y="8" width="60" height="60"/>
+                                                    <gestureRecognizers/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="60" id="Sgd-c6-FuY"/>
                                                         <constraint firstAttribute="width" constant="60" id="v7m-Fb-pvY"/>
                                                     </constraints>
+                                                    <connections>
+                                                        <outletCollection property="gestureRecognizers" destination="FkB-Ed-Qcf" appends="YES" id="g02-TH-5OZ"/>
+                                                    </connections>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="userName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yS-b5-39q">
                                                     <rect key="frame" x="76" y="8" width="71" height="17"/>
@@ -199,6 +203,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5ID-3h-8OJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <gestureRecognizer id="FkB-Ed-Qcf">
+                    <connections>
+                        <segue destination="9yH-3l-s3a" kind="show" identifier="onProfilePicture" id="U4i-at-hOX"/>
+                    </connections>
+                </gestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1621.5999999999999" y="130.88455772113943"/>
         </scene>
@@ -294,7 +303,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ohh-LP-Yzs" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="0HI-Ep-UW6"/>
             </objects>
-            <point key="canvasLocation" x="2869.5999999999999" y="900.89955022488766"/>
+            <point key="canvasLocation" x="3808.8000000000002" y="900.89955022488766"/>
         </scene>
         <!--Details Tweet Controller-->
         <scene sceneID="hHO-WV-Pgo">
@@ -510,10 +519,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="HZL-eP-5Cj">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="dmn-R5-bqk">
+                            <connections>
+                                <action selector="onBackButton:" destination="MBO-10-zAY" id="QgF-tn-UvE"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZHU-Ia-NmT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="889" y="868"/>
+            <point key="canvasLocation" x="1828" y="867.61619190404804"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="BWU-xR-YsX">
@@ -531,7 +547,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZRq-y7-RdN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2074" y="901"/>
+            <point key="canvasLocation" x="3012" y="900.89955022488766"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Tq5-Lk-yK1">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9yH-3l-s3a" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="lJu-ly-djm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="MBO-10-zAY" kind="relationship" relationship="rootViewController" id="v3p-LK-qgM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="P3a-57-pP4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="888.79999999999995" y="867.61619190404804"/>
         </scene>
     </scenes>
     <resources>
