added segue from profile

--- a/twitter-demo/twitter-demo/Base.lproj/Main.storyboard
+++ b/twitter-demo/twitter-demo/Base.lproj/Main.storyboard
@@ -22,10 +22,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JZM-9T-2TI">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JZM-9T-2TI">
                                 <rect key="frame" x="78" y="430" width="219" height="92"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.35503323074162874" green="0.78736175432879196" blue="0.97773437499999993" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="92" id="VgD-HN-Xen"/>
+                                    <constraint firstAttribute="width" constant="219" id="cFU-hq-RTT"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <state key="normal" title="Login with Twitter">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -36,6 +39,10 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="JZM-9T-2TI" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="410" id="VQe-6u-9WX"/>
+                            <constraint firstItem="JZM-9T-2TI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="62" id="lYt-dg-gdr"/>
+                        </constraints>
                     </view>
                     <connections>
                         <segue destination="zvP-Ed-jwY" kind="presentation" identifier="loginSegue" id="bHi-Gt-dyi"/>
@@ -629,6 +636,7 @@
                                                     <outlet property="timeStamp" destination="Xz9-Oc-Hya" id="mHo-gQ-LRm"/>
                                                     <outlet property="tweetText" destination="zzO-XQ-Hcg" id="XTE-TP-Qo2"/>
                                                     <outlet property="userName" destination="Ah2-Xn-mMZ" id="tQi-SE-cfL"/>
+                                                    <segue destination="rHZ-EF-siE" kind="show" identifier="viewDetailedTweet" id="w6L-lf-2tL"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
@@ -803,4 +811,7 @@
         <image name="iconmonstr-retweet-1-16" width="16" height="16"/>
         <image name="reply" width="16" height="16"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="CVf-c0-eTk"/>
+    </inferredMetricsTieBreakers>
 </document>
