--- a/twitter-demo/twitter-demo/Base.lproj/Main.storyboard
+++ b/twitter-demo/twitter-demo/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -52,7 +52,7 @@
             </objects>
             <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
-        <!--Twitter-->
+        <!--Tweets View Controller-->
         <scene sceneID="7Td-o2-kVW">
             <objects>
                 <viewController id="OVt-nD-7as" customClass="TweetsViewController" customModule="twitter_demo" customModuleProvider="target" sceneMemberID="viewController">
@@ -72,7 +72,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="135"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GtR-a9-2yo" id="4xU-ia-Uc3">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="134"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="135"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lbo-A7-MBe">
@@ -101,14 +101,14 @@
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uge-cV-9tz">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="240" verticalHuggingPriority="251" text="Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uge-cV-9tz">
                                                     <rect key="frame" x="76" y="28" width="28" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95G-2F-ms9">
-                                                    <rect key="frame" x="107" y="107.5" width="8" height="15"/>
+                                                    <rect key="frame" x="107" y="112" width="8" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -119,7 +119,7 @@
                                                         <constraint firstAttribute="height" constant="16" id="QTS-86-Fyw"/>
                                                         <constraint firstAttribute="width" constant="16" id="Ucy-0s-bHu"/>
                                                     </constraints>
-                                                    <state key="normal" title="Button" image="iconmonstr-favorite-3-16"/>
+                                                    <state key="normal" image="iconmonstr-favorite-3-16"/>
                                                     <connections>
                                                         <action selector="onFavoritesClicked:" destination="GtR-a9-2yo" eventType="touchUpInside" id="eTB-xg-cfg"/>
                                                     </connections>
@@ -130,13 +130,13 @@
                                                         <constraint firstAttribute="height" constant="16" id="8NR-Np-nk8"/>
                                                         <constraint firstAttribute="width" constant="16" id="Zlp-Nx-Fb1"/>
                                                     </constraints>
-                                                    <state key="normal" title="Button" image="iconmonstr-retweet-1-16" backgroundImage="iconmonstr-retweet-1-16"/>
+                                                    <state key="normal" image="iconmonstr-retweet-1-16" backgroundImage="iconmonstr-retweet-1-16"/>
                                                     <connections>
                                                         <action selector="onRetweetClicked:" destination="GtR-a9-2yo" eventType="touchUpInside" id="J2p-Ff-feE"/>
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jp7-ba-pNJ">
-                                                    <rect key="frame" x="203" y="106.5" width="8" height="15"/>
+                                                    <rect key="frame" x="203" y="111" width="8" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -190,16 +190,15 @@
                             <constraint firstItem="sUK-f0-Ntu" firstAttribute="top" secondItem="XbJ-xw-qef" secondAttribute="bottom" id="Z1Z-eX-Aky"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Twitter" id="ofK-Xj-Icr">
+                    <navigationItem key="navigationItem" id="ofK-Xj-Icr">
                         <barButtonItem key="leftBarButtonItem" title="Logout" id="xwY-Q2-6Au">
+                            <color key="tintColor" red="0.2057076096534729" green="0.62642794847488403" blue="0.94606345891952515" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="onLogOutButton:" destination="OVt-nD-7as" id="1CJ-gb-thl"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="AgJ-DN-FjZ">
-                            <connections>
-                                <segue destination="AYr-yJ-HQV" kind="presentation" identifier="createTweet" id="YEt-at-7uW"/>
-                            </connections>
+                        <barButtonItem key="rightBarButtonItem" image="compose" id="AgJ-DN-FjZ">
+                            <color key="tintColor" red="0.20629233121871948" green="0.62263345718383789" blue="0.9460715651512146" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -213,7 +212,7 @@
         <!--Create Tweet View Controller-->
         <scene sceneID="PaH-db-TNV">
             <objects>
-                <viewController id="VcW-Wt-gXp" customClass="CreateTweetViewController" customModule="twitter_demo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateTweetViewController" id="VcW-Wt-gXp" customClass="CreateTweetViewController" customModule="twitter_demo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3dg-EZ-tfP"/>
                         <viewControllerLayoutGuide type="bottom" id="xzL-ir-6Ph"/>
@@ -302,7 +301,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ohh-LP-Yzs" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="0HI-Ep-UW6"/>
             </objects>
-            <point key="canvasLocation" x="3808.8000000000002" y="900.89955022488766"/>
+            <point key="canvasLocation" x="3745" y="901"/>
         </scene>
         <!--Details Tweet Controller-->
         <scene sceneID="hHO-WV-Pgo">
@@ -424,6 +423,7 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="leadingMargin" secondItem="S1f-TE-Kj1" secondAttribute="leading" constant="8" id="0bN-k0-iUC"/>
                             <constraint firstItem="khp-n6-AdS" firstAttribute="top" secondItem="QY2-3d-J4N" secondAttribute="bottom" constant="19" id="4w1-cy-BgS"/>
@@ -487,7 +487,6 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.0" green="0.6698041558265686" blue="0.94023269414901733" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="barTintColor" red="0.0" green="0.6698041558265686" blue="0.94023269414901733" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -499,8 +498,10 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                     <autoresizingMask key="autoresizingMask"/>
                     <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="barTintColor" white="0.68000000000000005" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="tintColor" red="0.0" green="0.57143145799999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <textAttributes key="titleTextAttributes">
+                        <color key="textColor" red="0.0" green="0.57143145799636841" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </textAttributes>
                 </navigationBar>
             </objects>
             <point key="canvasLocation" x="888.79999999999995" y="123.68815592203899"/>
@@ -520,8 +521,8 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cfw-fS-2Jd">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="96" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VdR-ku-mnT">
-                                        <rect key="frame" x="0.0" y="173" width="375" height="366"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="96" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VdR-ku-mnT">
+                                        <rect key="frame" x="0.0" y="237" width="375" height="366"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="366" id="9rk-aj-CHI"/>
@@ -532,7 +533,7 @@
                                                 <rect key="frame" x="0.0" y="28" width="375" height="135"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hK5-qy-z76" id="dgg-g8-f3Y">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="134"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="135"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Ex-Sz-yPe">
@@ -749,6 +750,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="HZL-eP-5Cj">
                         <barButtonItem key="leftBarButtonItem" title="Back" id="dmn-R5-bqk">
+                            <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="onBackButton:" destination="MBO-10-zAY" id="QgF-tn-UvE"/>
                             </connections>
@@ -772,9 +774,10 @@
         <!--Navigation Controller-->
         <scene sceneID="BWU-xR-YsX">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZRq-y7-RdN" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AYr-yJ-HQV" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="goT-UW-Urk">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="goT-UW-Urk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -783,7 +786,6 @@
                         <segue destination="VcW-Wt-gXp" kind="relationship" relationship="rootViewController" id="6rd-Iz-QbN"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZRq-y7-RdN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3012" y="900.89955022488766"/>
         </scene>
@@ -792,9 +794,12 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9yH-3l-s3a" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="lJu-ly-djm">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="lJu-ly-djm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -807,6 +812,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="compose" width="40" height="40"/>
         <image name="iconmonstr-favorite-3-16" width="16" height="16"/>
         <image name="iconmonstr-retweet-1-16" width="16" height="16"/>
         <image name="reply" width="16" height="16"/>
